--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,15 +7,8 @@
        <FrameLayout
            android:id="@+id/frameLayout1"
            android:layout_width="match_parent"
-           android:layout_height="0dp"
-           android:layout_weight="0.12" >
-       </FrameLayout>
-
-       <FrameLayout
-           android:id="@+id/frameLayout2"
-           android:layout_width="match_parent"
-           android:layout_height="0dp"
-           android:layout_weight="1" >
+           android:layout_height="match_parent"
+            >
        </FrameLayout>
 
    </LinearLayout>
